refactor: enforce locale-insensitive case conversion and improve exception handling across the engine codebase